# open-prompts

./: CHANGELOG.md  README.md  README_zh-CN.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/models/: api_key.go  prompt.go  template.go
backend/internal/repository/: api_key_repository.go  prompt_repository.go  template_alias_repository.go  template_repository.go  template_version_repository.go  user_repository.go
backend/internal/service/: auth.go  email.go  prompt.go  prompt_test.go  user.go  user_test.go
deployment/: data.sql  docker-compose.yml  init.sql
deployment/chart/open-prompts/: Chart.yaml  init.sql  values.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  index.scss  setupTests.js
frontend/src/components/: APIKeyManager.js  APIKeyManager.scss  AuthBackground.js  AuthBackground.scss  CreateTemplateModal.js  CreateTemplateModal.test.js  Header.js  Header.scss  Header.test.js  Sidebar.js  TemplateAliasManager.js  TemplateAliasManager.scss  VersionSelect.js
frontend/src/context/: NotificationContext.js
frontend/src/pages/: APIKeys.js  APIKeys.scss  Home.js  Login.js  Login.scss  Profile.js  Register.js  Register.scss  TemplateDetails.js  TemplateDetails.scss
frontend/src/services/: api.js
frontend/src/store/: authSlice.js
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/openprompts/: __init__.py  client.py  exceptions.py
tests/: fvt.py
(+18 files in other folders)
